--- a/clusters/local.hub/argocd/theme/custom-cluster.css
+++ b/clusters/local.hub/argocd/theme/custom-cluster.css
@@ -1,4 +1,5 @@
-.top-bar__left-side .top-bar__right-side {
+.top-bar__left-side,
+.top-bar__right-side {
     background: "#3E8635";
     color: "#fff";
 }
