--- a/docs/themes/local.hub/custom-cluster.css
+++ b/docs/themes/local.hub/custom-cluster.css
@@ -1,5 +1,9 @@
 .top-bar__left-side,
 .top-bar__right-side {
-    background: "#3E8635";
-    color: "#fff";
+    background: #3E8635;
+    color: #fff;
+}
+.top-bar__breadcrumbs,
+.top-bar__title {
+    color: #fff;
 }
