--- a/docs/themes/local.hub/custom-cluster.css
+++ b/docs/themes/local.hub/custom-cluster.css
@@ -3,7 +3,9 @@
     background: #3E8635;
     color: #fff;
 }
-.top-bar__breadcrumbs,
+.top-bar__breadcrumbs {
+    color: #fff;
+}
 .top-bar__title {
     color: #fff;
 }
