Update styles to leave second row white

--- a/docs/themes/local.hub/custom-cluster.css
+++ b/docs/themes/local.hub/custom-cluster.css
@@ -1,5 +1,8 @@
-.columns.top-bar__left-side,
-.top-bar__title.text-truncate.top-bar__right-side {
+div.columns.small-9.top-bar__left-side {
+    background: #fefefe;
+}
+div.columns.top-bar__left-side,
+div.top-bar__title.text-truncate.top-bar__right-side {
     background: #3E8635;
     color: #fff;
 }
